[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/UI/Menu1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Images/UI/Survol/play.png" type="Texture" id=3]
[ext_resource path="res://Images/UI/Survol/exit.png" type="Texture" id=4]
[ext_resource path="res://Sons/Menu.wav" type="AudioStream" id=5]

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Control/Background"]
autostart = true

[node name="Play" type="TextureButton" parent="Control"]
margin_left = 742.595
margin_top = 220.681
margin_right = 1125.59
margin_bottom = 315.681
mouse_default_cursor_shape = 2
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Control"]
margin_left = 742.595
margin_top = 405.878
margin_right = 1125.59
margin_bottom = 498.878
mouse_default_cursor_shape = 2
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 640, 360 )
stream = ExtResource( 5 )
autoplay = true

[connection signal="timeout" from="Control/Background/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Control/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_Exit_pressed"]
